--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New year new me</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>Happy new year</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>New year new mission</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Merriweather:wght@400;900&display=swap" rel="stylesheet"/>
+  </head>
+  <body>
+    <div class="banner">
+        <h5 class="header-greeting">Happy New Year</h5>
+        <h3 class="header-text">New Year Party<br>Celebration</h3>
+    </div>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+  </body>
 </html>
