first section added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
         <h3 class="header-text">New Year Party<br>Celebration</h3>
     </div>
     <main>
-
+        <section>
+            <h2 class="first-section-offer">65% OFF</h2>
+            <p class="first-section-text">OUR HOLIDAY DEALS ARE BETTER</p>
+            <h3 class="first-section-category">ALL CATEGORIES</h3>
+            <div class="first-section-image">
+                <img src="images/New Year Photo.png" alt="">
+            </div>
+            </div>
+        </section>
     </main>
     <footer>
 
