image section added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
                 <img src="images/New Year Photo.png" alt="">
             </div>
             </div>
+
+            <!-- image section starts -->
+
+            <div class="image-section">
+                <div class="image-section-content"> 
+                    <h2 class="image-section-title">Welcome to <br>midnight party</h2>
+                <p class="image-section-text">Ladies and gentlemen this is midnight party. Enjoy your time here with your friends and family and make sure you don't miss out on any opportunity. </p>
+                <a href="">JOIN NOW</a>
+                </div>
+            <div class="inner-image">
+                <img src="images/Group 70.png" alt="">
+            </div>
+        </div>
+            <!-- image section ends  -->
+
+            <!-- schedule section starts -->
+            <!-- schedule section ends -->
         </section>
     </main>
     <footer>
