--- a/index.html
+++ b/index.html
@@ -40,7 +40,23 @@
             <!-- image section ends  -->
 
             <!-- schedule section starts -->
+            <div class="schedule-section">
+                <div class="schedule-location">
+                    <p>
+                        <span class="text-style">Place:</span><span class="text-style-info"> New Park Hotel</span><br>
+                    <span class="text-style">Date:</span><span class="text-style-info"> 31 December Night 2023</span><br>
+                    <span class="text-style">Time:</span><span class="text-style-info"> Evening 7.30 pm to 12.30 am</span>
+                    </p>
+                </div>
+                <div class="schedule-section-button">
+                    <button class="schedule-button">Join Now</button>
+                </div>
+            </div>
             <!-- schedule section ends -->
+            
+            <!-- bonus section starts -->
+
+            <!-- bonus section ends -->
         </section>
     </main>
     <footer>
