bonus section done

--- a/index.html
+++ b/index.html
@@ -55,7 +55,23 @@
             <!-- schedule section ends -->
             
             <!-- bonus section starts -->
-
+            <div class="bonus-container">
+                <div class="bonus-content-left">
+                    <p class="bonus-section-left-title">NEW BEST OFFER</p>
+                    <p class="bonus-section-left-text">Coming Soon</p>
+                    <p class="bonus-section-left-description">New offer is coming. Be with us and keep patience to enjoy the exciting offer. This will be year end sell so hurry up. </p>
+                </div>
+                <div class="bonus-content-middle">
+                    <div class="circle">
+                        <img src="images/Ellipse 1.png" alt="">
+                    </div>
+                </div>
+                <div class="bonus-content-right">
+                    <p class="bonus-content-right-title">2024</p>
+                    <p class="bonus-content-right-text">2024 is gonna be the exciting year for us and our valued members.</p>
+                    <img src="images/Group 96.png" alt="">
+                </div>
+            </div>
             <!-- bonus section ends -->
         </section>
     </main>
