holiday section done

--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@
                 </div>
             </div>
             <!-- bonus section ends -->
+
+            <!-- Holiday sale div starts -->
+            <div class="holiday-sale">
+                <p class="holiday-sale-text">WHAT IS FUNCTIONAL</p>
+                <p class="holiday-sale-title"><span class="holidays-title">Holidays</span> Sale 50%</p>
+                <p class="holiday-sale-description">Get 50% off on our holiday sale. Feel free to join us and never mind ask your inquiry. We are delivering the quality product to everyone. This offer is going to be one of the best in the history of sales! So hurry up and register on our system as early as possible.</p>
+            </div>
+            <!-- Holiday sale div ends -->
+
+            <!-- Discount section starts -->
+            <div class="discount">
+                
+            </div>
+            <!-- Discount section ends -->
         </section>
     </main>
     <footer>
