discount section starts

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 
             <!-- Discount section starts -->
             <div class="discount">
-                
+                <img src="images/Group 75.png" alt="" class="discount-left">
+                <img src="images/Group 44.png" alt="" class="discount-right">
             </div>
             <!-- Discount section ends -->
         </section>
