portfolio section added

--- a/index.html
+++ b/index.html
@@ -88,6 +88,32 @@
                 <img src="images/Group 44.png" alt="" class="discount-right">
             </div>
             <!-- Discount section ends -->
+
+            <!-- Portfolio section starts -->
+            <div class="portfolio-section">
+                <div class="portfolio-text-content">
+                    <p class="portfolio-text">THE BEST GIFTS</p>
+                    <p class="portfolio-title">Our Awesome Portfolio</p>
+                    <p class="portfolio-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div class="portfolio-images">
+                    <div class="first-row">
+                        <img src="images/Rectangle 3.png" alt="">
+                        <img src="images/Rectangle 4.png" alt="">
+                        <img src="images/Rectangle 5.png" alt="">
+                    </div>
+                    <div class="second-row">
+                        <img src="images/Rectangle 6.png" alt="">
+                        <img src="images/Rectangle 7.png" alt="">
+                        <img src="images/Rectangle 8.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <!-- Portfolio section ends -->
+
+            <!-- Newsletter section starts -->
+
+            <!-- Newsletter section ends -->
         </section>
     </main>
     <footer>
