newsletter section added

--- a/index.html
+++ b/index.html
@@ -112,12 +112,23 @@
             <!-- Portfolio section ends -->
 
             <!-- Newsletter section starts -->
+            <div class="newsletter-section">
+                <img src="images/Group 61.png" alt="" class="newsletter-icon">
+                <p class="newsletter-title">Subscribe Newsletter</p>
+                <p class="newsletter-description">Subscribe to oue newsletter. This will keep you updated and let you inform the latest news. We post so often in this platform. So stay with us till then. </p>
 
+                <div class="newsletter-form">
+                    <label for="">
+                        <input type="text" placeholder="user@gmail.com">                
+                         <button class="newsletter-btn">Subscribe</button>
+                    </label>
+                </div>
+            </div>
             <!-- Newsletter section ends -->
         </section>
     </main>
     <footer>
-
+        
     </footer>
   </body>
 </html>
