--- a/index.html
+++ b/index.html
@@ -128,7 +128,33 @@
         </section>
     </main>
     <footer>
-        
+        <div class="footer-container">
+            <div class="footer-top">
+                <div class="footer-top-left">
+                    <p class="footer-text">44, Big Building Roosevelt Street 
+                         Beach Gardens Florida 33410</p>
+                </div>
+                <div class="footer-top-right">
+                    <p class="footer-text"><img src="images/Call.png" alt="">+00 123 584 124</p>
+                    <p class="footer-text"><img src="images/Website.png" alt="">www.website.com</p>
+                </div>
+            </div>
+            <hr>
+            <div class="footer-middle">
+                <img src="images/Facebook.png" alt="">
+                <img src="images/Instagram.png" alt="">
+                <img src="images/Twitter.png" alt="">
+                <img src="images/Linkedin.png" alt="">
+            </div>
+            <hr>
+            <div class="footer-bottom">
+                <div class="footer-bottom-left">
+                    <p class="footer-text">2017, All Rights Reserved.</p>
+                </div>
+                <div class="footer-bottom-right"><a href="" class="footer-text">Unsubscribe</a>
+                </div>
+            </div>
+        </div>
     </footer>
   </body>
 </html>
